# multi-agent-orchestrator

./: .env.example  .gitignore  ARCHITECTURE.md  BITBUCKET_MIGRATION_GUIDE.md  PROJECT_SETUP_SCRIPTS.md  QUICK_START.md  README.md  README_TESTING.md  SETUP_GUIDE.md  __INIT__EXAMPLES.py  __INIT__EXPLANATION.md  __INIT__SUMMARY.md  __PYCACHE__EXPLANATION.md  copy_project_files.py  create_full_project.sh  demo_pycache.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_aws_sdk.sh  setup_project.py
aws_agent_core/: README.md  __init__.py  orchestrator.py
config/: agents.yaml  logging.yaml  prompts.yaml
docs/: AWS_AGENT_CORE_LANGGRAPH_INTEGRATION.md  AWS_DOCUMENTATION_REFERENCES.md  AWS_INFRASTRUCTURE_REQUIREMENTS.md  AWS_SDK_SETUP.md  AWS_SERVICES_REQUEST.md  COMPLETE_PROCESS_FLOW_DIAGRAM.md  ECR_QUICK_START.md  ECS_CONTAINERIZATION_GUIDE.md  HMAC_VERIFICATION_REFERENCE.md  LAMBDA_CONFIGURATION_GUIDE.md  LANGGRAPH_INVOCATION_FLOW.md  MS_TEAMS_WEBHOOK_INTEGRATION_GUIDE.md  Multi-Agent_Orchestrator.postman_collection.json  Multi-Agent_Orchestrator.postman_environment.json  POSTMAN_API_SPECIFICATION.md  POSTMAN_QUICK_REFERENCE.md  POSTMAN_TESTING_GUIDE.md  PROMPT_MANAGEMENT.md  ROUTING_STRATEGIES.md  SPCS_LANGGRAPH_AGENT_GATEWAY_DEPLOYMENT.md  STATE_MEMORY_MANAGEMENT.md  TEAMS_INTEGRATION.md  TEAMS_INTEGRATION_LAMBDA.md  TESTING_SNOWFLAKE.md  TRULENS_OBSERVABILITY.md
langfuse/: __init__.py  config.py  prompt_manager.py
langgraph/: __init__.py  __main__.py  supervisor.py
scripts/: __init__.py  install_aws_sdk.py  (+10 more)
(+107 files in other folders)
